# huion-linux-driver-rust

./: Cargo.toml  README.md  rustfmt.toml
src/: device_setup.rs  main.rs
