[package]
name = "huion-drivers-wayland-rs"
version = "0.1.0"
authors = ["David Bonet Montes <webbonet@gmail.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "Linux Driver for Huion graphic display tablets."
# documentation = "https://github.com/DavidBM/slacktus/blob/master/README.md"
homepage = "https://github.com/DavidBM/huion-linux-driver-rust"
repository = "git@github.com:DavidBM/huion-linux-driver-rust.git"
# readme="README.md"

[dependencies]
rusb = "0.5.2"
evdev-rs = "0.2.0"
